<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">fuzhaowei</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="start_make">开始使用</string>
    <string name="manager">请输入管理员账号</string>
    <string name="password">请输入密码</string>
    <string name="password_slip">密码:</string>
    <string name="entry">登陆</string>
    <string name="account">账号:</string>
    <string name="enetring">身分录入</string>
    <string name="search">信息搜索</string>
    <string name="setup">设置</string>
    <string name="slip">密码:</string>
    <string name="main">主页面</string>
    <string name="id_card">身份证录入</string>
    <string name="name">姓名：</string>
    <string name="name_hint">请输入您的姓名</string>
    <string name="man">男性</string>
    <string name="sex">女性</string>
    <string name="nation">民族：</string>
    <string name="nation_hint">请输入民族</string>
    <string name="address">地址：</string>
    <string name="address_hint">请输入地址</string>
    <string name="manage_infor">管理员信息</string>
    <string name="dete_mod">确定修改</string>
    <string name="date_of_birth">出生日期</string>
    <string name="keep">保存</string>
    <string name="id_number">身份证号：</string>
    <string name="id_number_hint">请输入身份证号</string>
    <string name="data_search">信息搜索</string>
    <string name="name_id_card">请输入身份证号或者姓名进行查询</string>

</resources>