<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <include layout="@layout/pulbic_title" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/account"
                    android:textSize="@dimen/title_text_size" />

                <EditText
                    android:id="@+id/manager_loagin"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/login_margin_manager"
                    android:layout_weight="1"
                    android:hint="@string/manager" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/slip"
                    android:textSize="@dimen/title_text_size" />

                <EditText
                    android:id="@+id/password_login"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/login_margin_manager"
                    android:hint="@string/password"
                    android:inputType="textPassword" />
            </LinearLayout>

            <Button
                android:id="@+id/entry_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="5dip"
                android:background="@drawable/button_click"
                android:padding="@dimen/pager3_padding"
                android:text="@string/entry"
                android:textColor="@color/white" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>