<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sss"
    android:orientation="vertical" >

    <include layout="@layout/pulbic_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical" >

        <android.support.v4.view.ViewPager
            android:id="@+id/viewpager_main"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/enetring_main"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dip"
                android:layout_marginRight="5dip"
                android:layout_weight="1"
                android:background="@drawable/button_click"
                android:padding="@dimen/pager3_padding"
                android:text="@string/enetring"
                android:textColor="@color/red" />

            <Button
                android:id="@+id/search_main"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dip"
                android:layout_marginRight="5dip"
                android:layout_weight="1"
                android:background="@drawable/button_click"
                android:padding="@dimen/pager3_padding"
                android:text="@string/search"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/setup_main"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dip"
                android:layout_marginRight="5dip"
                android:layout_weight="1"
                android:background="@drawable/button_click"
                android:padding="@dimen/pager3_padding"
                android:text="@string/setup"
                android:textColor="@color/white" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>