<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sss"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dip"
                android:layout_marginTop="10dip"
                android:gravity="center"
                android:text="@string/id_card"
                android:textColor="@color/white"
                android:textSize="@dimen/title_text_size"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/head_main"
                android:layout_width="100dip"
                android:layout_height="100dip"
                android:layout_gravity="center"
                android:layout_marginBottom="10dip"
                android:background="@drawable/frame_view" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dip"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/frame_view"
                        android:gravity="center_vertical"
                        android:padding="@dimen/padding_frag1"
                        android:text="@string/name"
                        android:textColor="@color/white"
                        android:textSize="@dimen/title_text_size" />

                    <EditText
                        android:id="@+id/name_frag1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dip"
                        android:background="@drawable/frame_view"
                        android:gravity="center_vertical"
                        android:inputType="textPersonName"
                        android:padding="@dimen/padding_frag1"
                        android:textColorHint="@color/white" />
                </LinearLayout>

                <View
                    android:layout_width="5dip"
                    android:layout_height="match_parent"
                    android:background="@null" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dip"
                        android:background="@drawable/frame_view"
                        android:padding="@dimen/padding_frag1"
                        android:text="@string/nation"
                        android:textColor="@color/white"
                        android:textSize="@dimen/title_text_size" />

                    <EditText
                        android:id="@+id/nation_frag1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="3dip"
                        android:layout_weight="1"
                        android:background="@drawable/frame_view"
                        android:padding="@dimen/padding_frag1"
                        android:textColorHint="@color/white" />
                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="5dip"
                android:background="@null" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/frame_view"
                    android:padding="@dimen/padding_frag1"
                    android:text="@string/id_number"
                    android:textColor="@color/white"
                    android:textSize="@dimen/title_text_size" />

                <EditText
                    android:id="@+id/id_number_frag1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dip"
                    android:background="@drawable/frame_view"
                    android:padding="@dimen/padding_frag1"
                    android:textColorHint="@color/white" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="5dip"
                android:background="@null" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <RadioGroup
                        android:id="@+id/group_frag1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="horizontal" >

                        <RadioButton
                            android:id="@+id/radbtn_frag1_man"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checked="true"
                            android:text="@string/man"
                            android:textColor="@color/white" />

                        <RadioButton
                            android:id="@+id/radbtn_frag1_sex"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/sex"
                            android:textColor="@color/white" />
                    </RadioGroup>
                </LinearLayout>

                <Button
                    android:id="@+id/data_frag1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dip"
                    android:layout_weight="1"
                    android:background="@drawable/button_click"
                    android:padding="10dip"
                    android:text="@string/date_of_birth"
                    android:textColor="@color/white" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="5dip"
                android:background="@null" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/frame_view"
                    android:padding="@dimen/padding_frag1"
                    android:text="@string/address"
                    android:textColor="@color/white"
                    android:textSize="@dimen/title_text_size" />

                <EditText
                    android:id="@+id/address_frag1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dip"
                    android:layout_weight="1"
                    android:background="@drawable/frame_view"
                    android:inputType="textPostalAddress"
                    android:padding="@dimen/padding_frag1"
                    android:textColorHint="@color/white" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="5dip"
                android:background="@null" />

            <Button
                android:id="@+id/keep_frag1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dip"
                android:background="@drawable/button_click"
                android:padding="10dip"
                android:text="@string/keep"
                android:textColor="@color/white"
                android:textSize="@dimen/title_text_size" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>